# noway-filter-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  docs.md  pyproject.toml  road.md
bot/: access.py  delivery.py  ephemeral.py  gate.py  guards.py  main.py  ui.py
bot/handlers/: access_admin.py  admin.py  callbacks.py  group_filters.py  groups.py  moderation.py  search.py  start.py
docs/: backup.md  deploy.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_file_languages.py  0003_series_season.py  0004_moderation_groups.py  0005_access_and_settings.py
scripts/: backup.sh  loadtest.py  restore.sh
shared/: alerts.py  config.py  demand.py  health.py  logchannel.py  ratelimit.py  redis_client.py  settings_store.py  shortener.py  watchdog.py
shared/db/: engine.py  models.py
shared/db/repos/: files.py  filters.py  groups.py  progress.py  stats.py  titles.py  users.py
shared/parsing/: filename.py  languages.py  quality.py
shared/search/: __main__.py  cache.py  nlu.py  query.py  service.py
shared/telegram/: client.py
tests/: extract_channel_files.py  test_access.py  test_ephemeral.py  test_filename_parser.py  test_group_filters.py  test_languages.py  test_nlu.py  test_query_parser.py  test_ratelimit.py  test_search_filter.py  test_search_service.py  test_ui.py
worker/: backfill.py  enqueue.py  indexer.py  live.py  main.py  pacing.py  reparse.py  resolver.py
