[project]
name = "nowaybot"
version = "0.1.0"
description = "Telegram movie/file filter bot - resumable indexing worker, bot, shared layer"
requires-python = ">=3.12"
dependencies = [
    "pyrofork>=2.3.60",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.6",
    "psutil>=7.2.2",
    "tgcrypto-pyrofork>=1.2.8",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "worker", "bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
